--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cinephile Daily</title>
+    <title>Cinéphile Daily — How Well Do You Know Cinema?</title>
+
+    <!-- OpenGraph -->
+    <meta property="og:title" content="Cinéphile Daily — How Well Do You Know Cinema?" />
+    <meta property="og:description" content="Three daily movie puzzles. Test your film knowledge." />
+    <meta property="og:image" content="https://cinephile.codyp.xyz/og-image.png" />
+    <meta property="og:url" content="https://cinephile.codyp.xyz" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Cinéphile Daily — How Well Do You Know Cinema?" />
+    <meta name="twitter:description" content="Three daily movie puzzles. Test your film knowledge." />
+    <meta name="twitter:image" content="https://cinephile.codyp.xyz/og-image.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;0,900;1,400&family=Cormorant+Garamond:ital,wght@0,400;0,600;1,400&family=Bebas+Neue&display=swap" rel="stylesheet">
